# fractal-cdt

./: .gitignore  README.md
build-scripts/: build.bat  build.sh  pre_build_amazon.sh  pre_build_centos.sh  pre_build_darwin.sh  pre_build_ubuntu.sh
docs/source/: conf.py  index.rst
docs/source/contract/: helloworld.rst  roster.rst  token.rst
docs/source/examples/: index.rst  roster.rst  token.rst
docs/source/guides/: index.rst
examples/samples/: addressbook.abi  addressbook.cpp  addressbook.wasm  call.abi  call.cpp  call.wasm  hello.abi  hello.cpp  hello.wasm
examples/test/: log_test.abi  log_test.cpp  log_test.wasm  map_test.abi  map_test.cpp  map_test.wasm  sha256_test.abi  sha256_test.cpp  sha256_test.wasm  system_test.abi  system_test.cpp  system_test.wasm
libraries/: CMakeLists.txt
libraries/boost/: CMakeLists.txt
libraries/ftllib/: CMakeLists.txt
libraries/ftllib/include/ftllib/: action.hpp  address.hpp  base.hpp  check.hpp  crypto.hpp  datastream.hpp  dispatcher.hpp  log.hpp  map.hpp  name.hpp  print.hpp  system.hpp  varint.hpp
libraries/ftllib/src/: malloc.cpp  memory.cpp
libraries/libc/: CMakeLists.txt
libraries/libc++/: CMakeLists.txt
libraries/libc++/libcxx/include/: __locale  cstddef  iostream  iterator  new
libraries/libc++/libcxx/src/: exception.cpp  ftl.cpp  locale.cpp  new.cpp  stdexcept.cpp
libraries/libc++/libcxx/src/include/: refstring.h
libraries/libc++/libcxx/src/support/runtime/: exception_fallback.ipp
libraries/libc/musl/include/: unistd.h
libraries/libc/musl/src/stdio/: printf.c
tools/: CMakeLists.txt
tools/fractal-tools/: CMakeLists.txt
tools/fractal-tools/cc/: CMakeLists.txt  fractal-cc.cpp.in  fractal-cpp.cpp.in
tools/fractal-tools/include/: compiler_options.hpp
tools/fractal-tools/include/ftl/: abi.hpp  abigen.hpp  gen.hpp  utils.hpp
tools/fractal-tools/include/ftl/whereami/: bsd.hpp  linux.hpp  osx.hpp  whereami.hpp  win.hpp
tools/fractal-tools/jsoncons/include/jsoncons/: bignum.hpp
tools/fractal-tools/ld/: CMakeLists.txt  fractal-ld.cpp.in
tools/llvm/: .gitignore  CMakeLists.txt
tools/llvm/include/llvm/Object/: Wasm.h
tools/llvm/include/llvm/Support/: ConvertUTF.h
tools/llvm/lib/Object/: WasmObjectFile.cpp
tools/llvm/lib/Transforms/: CMakeLists.txt
tools/llvm/lib/Transforms/FtlFixup/: CMakeLists.txt  FtlFixup.cpp
tools/llvm/tools/clang/: CMakeLists.txt
tools/llvm/tools/clang/include/clang/AST/: Decl.h  DeclCXX.h
tools/llvm/tools/clang/include/clang/Basic/: Attr.td  AttrDocs.td
tools/llvm/tools/clang/lib/AST/: Decl.cpp
tools/llvm/tools/clang/lib/CodeGen/: CodeGenModule.cpp
tools/llvm/tools/clang/lib/Lex/: PPMacroExpansion.cpp
tools/llvm/tools/clang/lib/Sema/: SemaDeclAttr.cpp
tools/llvm/tools/clang/plugins/: CMakeLists.txt
tools/llvm/tools/clang/plugins/ftl_plugin/: CMakeLists.txt  ftl_autogen.cpp
tools/llvm/tools/clang/tools/: CMakeLists.txt
tools/llvm/tools/lld/cmake/modules/: AddLLD.cmake
tools/llvm/tools/lld/wasm/: CMakeLists.txt  Config.h  Driver.cpp  InputFiles.cpp  InputFiles.h  SymbolTable.cpp  SymbolTable.h  Symbols.cpp  Symbols.h  Writer.cpp
